--- a/moralis-scan/package.json
+++ b/moralis-scan/package.json
@@ -9,6 +9,7 @@
     "moralis": "0.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
