--- a/moralis-scan/package.json
+++ b/moralis-scan/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "ethereum-blockies-base64": "^1.0.2",
+    "luxon": "^1.26.0",
     "moralis": "0.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
