import script file to use moralis

--- a/angular-moralis/tsconfig.json
+++ b/angular-moralis/tsconfig.json
@@ -5,7 +5,9 @@
   To learn more about this file see: https://angular.io/config/solution-tsconfig.
 */
 {
-  "files": [],
+  "files": [
+    "./global.d.ts"
+  ],
   "references": [
     {
       "path": "./tsconfig.app.json"
