--- a/angular-moralis/tsconfig.app.json
+++ b/angular-moralis/tsconfig.app.json
@@ -7,8 +7,7 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts",
-    "./global.d.ts"
+    "src/polyfills.ts"
   ],
   "include": [
     "src/**/*.d.ts"
