--- a/moralis-react-app/package.json
+++ b/moralis-react-app/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "moralis-react-app",
+  "name": "moralis-react-blank-boilerplate",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "moralis": "^0.0.9",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@walletconnect/web3-provider": "^1.6.6",
+    "axios": "^0.23.0",
+    "moralis": "^0.0.88",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-moralis": "^0.2.6",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
