npm: add lite-server for serving the production version of the app under: http://dev.localhost:5222/

--- a/moralis-angular-app/angular.json
+++ b/moralis-angular-app/angular.json
@@ -81,7 +81,8 @@
               "browserTarget": "moralis-angular-app:build:production"
             },
             "development": {
-              "browserTarget": "moralis-angular-app:build:development"
+              "browserTarget": "moralis-angular-app:build:development",
+              "port": 4222
             }
           },
           "defaultConfiguration": "development"
