--- a/moralis-angular-app/package.json
+++ b/moralis-angular-app/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "demo": "npm run build && lite-server -c bs-config.js"
   },
   "private": true,
   "dependencies": {
@@ -34,6 +35,7 @@
     "karma-coverage": "2.0.3",
     "karma-jasmine": "4.0.0",
     "karma-jasmine-html-reporter": "1.7.0",
+    "lite-server": "2.6.1",
     "typescript": "4.3.5"
   }
 }
