--- a/moralis-angular-app/angular.json
+++ b/moralis-angular-app/angular.json
@@ -39,7 +39,15 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "query-string",
+              "hash.js",
+              "@walletconnect/encoding",
+              "@walletconnect/socket-transport",
+              "@walletconnect/window-metadata",
+              "@walletconnect/environment"
+            ]
           },
           "configurations": {
             "production": {
@@ -47,7 +55,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "3mb"
                 },
                 {
                   "type": "anyComponentStyle",
