--- a/moralis-angular-app/package.json
+++ b/moralis-angular-app/package.json
@@ -19,7 +19,15 @@
     "@angular/platform-browser": "12.2.0",
     "@angular/platform-browser-dynamic": "12.2.0",
     "@angular/router": "12.2.0",
-    "rxjs": "6.6.0",
+    "@walletconnect/web3-provider": "1.6.5",
+    "assert": "2.0.0",
+    "crypto-browserify": "3.12.0",
+    "https-browserify": "1.0.0",
+    "moralis": "0.0.95",
+    "os-browserify": "0.3.0",
+    "rxjs": "7.4.0",
+    "stream-browserify": "3.0.0",
+    "stream-http": "3.2.0",
     "tslib": "2.3.0",
     "zone.js": "0.11.4"
   },
