add correct moralis dependencies

--- a/react-native-boilerplate/package.json
+++ b/react-native-boilerplate/package.json
@@ -9,12 +9,12 @@
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
-    "moralis": "../../moralis-sdk-js",
+    "moralis": "0.0.99",
     "node-libs-browser": "2.2.1",
     "path-browserify": "0.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-moralis": "../../react-moralis",
+    "react-moralis": "0.2.7",
     "react-native": "~0.63.4",
     "react-native-crypto": "2.2.0",
     "react-native-dotenv": "2.4.3",
