moralis-angular-app: add ng upgrade script

--- a/moralis-angular-app/package.json
+++ b/moralis-angular-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "upgrade": "ng update @angular/cli @angular/core",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
