--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "axios": "^0.27.2",
         "moralis": "2.0.1",
+        "next": "^12.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     }
