--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,10 +9,16 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@moralisweb3/next": "^2.8.0",
         "axios": "^0.27.2",
-        "moralis": "2.0.1",
-        "next": "^12.2.4",
+        "moralis": "^2.8.0",
+        "next": "^13.0.5",
+        "next-auth": "^4.17.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/react": "18.0.25",
+        "typescript": "4.9.3"
     }
 }
