nextjs auth added

--- a/nextjs_moralis_nft_gating/package.json
+++ b/nextjs_moralis_nft_gating/package.json
@@ -10,7 +10,7 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
-        "moralis": "2.0.1",
+        "moralis": "^2.8.0",
         "next": "^12.2.4",
         "next-auth": "^4.10.3",
         "react": "^18.2.0",
